<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9fd7fa">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addmessage"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liveview"
        android:id="@+id/button3"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:layout_marginLeft="0dp"
        android:layout_above="@+id/editText"
        android:layout_alignEnd="@+id/button"
        android:background="#ffffff"
        android:layout_below="@+id/button3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/title"
        android:layout_above="@+id/editText2"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentStart="true"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:hint="@string/message"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button" />

</RelativeLayout>