<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_filter"
        android:title="Edit"
        android:orderInCategory="10"

         />
    <item
        android:id="@+id/action_delete"
        android:title="Delete"
        android:orderInCategory="11"/>
</menu>